Add condensate route options and Safari compatibility fixes

--- a/index.html
+++ b/index.html
@@ -130,6 +130,20 @@
           </div>
         </div>
       </section>
+
+      <section class="panel" aria-labelledby="condensateHeading">
+        <div class="panel-head">
+          <div>
+            <p class="step-count">Step 6</p>
+            <h2 id="condensateHeading">Condensate route</h2>
+          </div>
+          <p class="panel-hint">Select the condensate discharge arrangement required.</p>
+        </div>
+        <fieldset class="fieldset" id="condensateRouteGroup">
+          <legend>Condensate discharge</legend>
+          <div class="choice-group" id="condensateChoices" role="radiogroup" aria-labelledby="condensateRouteGroup"></div>
+        </fieldset>
+      </section>
     </main>
 
     <aside class="summary" aria-live="polite">
