--- a/index.html
+++ b/index.html
@@ -72,77 +72,99 @@
         </div>
       </section>
 
-      <section class="panel" aria-labelledby="newSetupHeading">
+      <section class="panel" aria-labelledby="newLocationHeading">
         <div class="panel-head">
           <div>
             <p class="step-count">Step 5</p>
-            <h2 id="newSetupHeading">New boiler setup</h2>
+            <h2 id="newLocationHeading">New boiler location</h2>
           </div>
-          <p class="panel-hint">Plan the proposed location, type and flue route for the replacement boiler.</p>
+          <p class="panel-hint">Tap a hotspot to choose where the new boiler will be fitted.</p>
         </div>
+        <div class="house-scene">
+          <div class="house-illustration compact" id="newHouseHotspots" role="listbox" aria-labelledby="newLocationHeading"></div>
+        </div>
+      </section>
 
-        <div class="new-setup">
+      <section class="panel" aria-labelledby="newBoilerHeading">
+        <div class="panel-head">
           <div>
-            <h3>New boiler location</h3>
-            <p class="panel-subhint">Tap a hotspot to choose where the new boiler will be fitted.</p>
-            <div class="house-scene">
-              <div class="house-illustration compact" id="newHouseHotspots" role="listbox" aria-labelledby="newSetupHeading"></div>
+            <p class="step-count">Step 6</p>
+            <h2 id="newBoilerHeading">New boiler type</h2>
+          </div>
+          <p class="panel-hint">Choose the specification for the replacement boiler.</p>
+        </div>
+        <fieldset class="fieldset" id="newBoilerTypeGroup">
+          <legend>New boiler type</legend>
+          <div class="choice-group" id="newBoilerChoices" role="radiogroup" aria-labelledby="newBoilerTypeGroup"></div>
+        </fieldset>
+      </section>
+
+      <section class="panel" aria-labelledby="newFlueHeading">
+        <div class="panel-head">
+          <div>
+            <p class="step-count">Step 7</p>
+            <h2 id="newFlueHeading">New flue direction</h2>
+          </div>
+          <p class="panel-hint">Select the flue direction and build the proposed route.</p>
+        </div>
+        <div class="new-setup-controls">
+          <fieldset class="fieldset" id="newFlueDirectionGroup">
+            <legend>New flue direction</legend>
+            <div class="choice-group" id="newFlueDirectionChoices" role="radiogroup" aria-labelledby="newFlueDirectionGroup"></div>
+          </fieldset>
+
+          <section class="flue-builder" aria-labelledby="flueBuilderHeading">
+            <div class="builder-head">
+              <h3 id="flueBuilderHeading">Bends &amp; extensions</h3>
+              <p class="panel-subhint">Add 45° or 90° bends and 1&nbsp;m extensions in the order required. The flue route updates as you add components.</p>
             </div>
-          </div>
-
-          <div class="new-setup-controls">
-            <fieldset class="fieldset" id="newBoilerTypeGroup">
-              <legend>New boiler type</legend>
-              <div class="choice-group" id="newBoilerChoices" role="radiogroup" aria-labelledby="newBoilerTypeGroup"></div>
-            </fieldset>
-
-            <fieldset class="fieldset" id="newFlueDirectionGroup">
-              <legend>New flue direction</legend>
-              <div class="choice-group" id="newFlueDirectionChoices" role="radiogroup" aria-labelledby="newFlueDirectionGroup"></div>
-            </fieldset>
-
-            <section class="flue-builder" aria-labelledby="flueBuilderHeading">
-              <div class="builder-head">
-                <h3 id="flueBuilderHeading">Bends &amp; extensions</h3>
-                <p class="panel-subhint">Add 45° or 90° bends and 1&nbsp;m extensions in the order required. The flue route updates as you add components.</p>
-              </div>
-              <div class="builder-controls" role="group" aria-label="Add fittings to the flue route">
-                <button type="button" class="chip-button" data-component="extension">
-                  <span class="chip-icon" aria-hidden="true"></span>
-                  1&nbsp;m extension
-                </button>
-                <button type="button" class="chip-button" data-component="bend45">
-                  <span class="chip-icon" aria-hidden="true"></span>
-                  45° bend
-                </button>
-                <button type="button" class="chip-button" data-component="bend90">
-                  <span class="chip-icon" aria-hidden="true"></span>
-                  90° bend
-                </button>
-              </div>
-              <div class="flue-preview" id="fluePathPreview" aria-hidden="true"></div>
-              <ol class="component-list" id="flueComponentList" aria-live="polite"></ol>
-              <div class="builder-actions">
-                <button type="button" class="chip-button primary" id="undoFlueComponent">Undo last</button>
-                <button type="button" class="chip-button secondary" id="clearFlueComponents">Clear all</button>
-              </div>
-            </section>
-          </div>
+            <div class="builder-controls" role="group" aria-label="Add fittings to the flue route">
+              <button type="button" class="chip-button" data-component="extension">
+                <span class="chip-icon" aria-hidden="true"></span>
+                1&nbsp;m extension
+              </button>
+              <button type="button" class="chip-button" data-component="bend45">
+                <span class="chip-icon" aria-hidden="true"></span>
+                45° bend
+              </button>
+              <button type="button" class="chip-button" data-component="bend90">
+                <span class="chip-icon" aria-hidden="true"></span>
+                90° bend
+              </button>
+            </div>
+            <div class="flue-preview" id="fluePathPreview" aria-hidden="true"></div>
+            <ol class="component-list" id="flueComponentList" aria-live="polite"></ol>
+            <div class="builder-actions">
+              <button type="button" class="chip-button primary" id="undoFlueComponent">Undo last</button>
+              <button type="button" class="chip-button secondary" id="clearFlueComponents">Clear all</button>
+            </div>
+          </section>
         </div>
       </section>
 
       <section class="panel" aria-labelledby="condensateHeading">
         <div class="panel-head">
           <div>
-            <p class="step-count">Step 6</p>
+            <p class="step-count">Step 8</p>
             <h2 id="condensateHeading">Condensate route</h2>
           </div>
-          <p class="panel-hint">Select the condensate discharge arrangement required.</p>
+          <p class="panel-hint">Select all condensate discharge arrangements required.</p>
         </div>
         <fieldset class="fieldset" id="condensateRouteGroup">
           <legend>Condensate discharge</legend>
-          <div class="choice-group" id="condensateChoices" role="radiogroup" aria-labelledby="condensateRouteGroup"></div>
+          <div class="choice-group" id="condensateChoices" role="group" aria-labelledby="condensateRouteGroup"></div>
         </fieldset>
+      </section>
+
+      <section class="panel" aria-labelledby="systemUpgradesHeading">
+        <div class="panel-head">
+          <div>
+            <p class="step-count">Step 9</p>
+            <h2 id="systemUpgradesHeading">Heating system works</h2>
+          </div>
+          <p class="panel-hint">Select all upgrade items required. Use the + or − controls for multiples.</p>
+        </div>
+        <div class="upgrade-grid" id="systemUpgradeGrid" role="group" aria-labelledby="systemUpgradesHeading"></div>
       </section>
     </main>
 
