Add building work step and update blue styling

--- a/index.html
+++ b/index.html
@@ -156,10 +156,24 @@
         </fieldset>
       </section>
 
-      <section class="panel" aria-labelledby="condensateHeading">
+      <section class="panel" aria-labelledby="buildingWorkHeading">
         <div class="panel-head">
           <div>
             <p class="step-count">Step 9</p>
+            <h2 id="buildingWorkHeading">Building work &amp; making good</h2>
+          </div>
+          <p class="panel-hint">Select all building work requirements linked to the flue.</p>
+        </div>
+        <fieldset class="fieldset" id="buildingWorkGroup">
+          <legend>Building work</legend>
+          <div class="choice-group" id="buildingWorkChoices" role="group" aria-labelledby="buildingWorkGroup"></div>
+        </fieldset>
+      </section>
+
+      <section class="panel" aria-labelledby="condensateHeading">
+        <div class="panel-head">
+          <div>
+            <p class="step-count">Step 10</p>
             <h2 id="condensateHeading">Condensate route</h2>
           </div>
           <p class="panel-hint">Select all condensate discharge arrangements required.</p>
@@ -173,7 +187,7 @@
       <section class="panel" aria-labelledby="systemUpgradesHeading">
         <div class="panel-head">
           <div>
-            <p class="step-count">Step 10</p>
+            <p class="step-count">Step 11</p>
             <h2 id="systemUpgradesHeading">Heating system works</h2>
           </div>
           <p class="panel-hint">Select all upgrade items required. Use the + or − controls for multiples.</p>
@@ -184,7 +198,7 @@
       <section class="panel" aria-labelledby="cylinderHeading">
         <div class="panel-head">
           <div>
-            <p class="step-count">Step 11</p>
+            <p class="step-count">Step 12</p>
             <h2 id="cylinderHeading">Cylinder works</h2>
           </div>
           <p class="panel-hint">Select all cylinder requirements for the installation.</p>
@@ -198,7 +212,7 @@
       <section class="panel" aria-labelledby="controlHeading">
         <div class="panel-head">
           <div>
-            <p class="step-count">Step 12</p>
+            <p class="step-count">Step 13</p>
             <h2 id="controlHeading">Customer controls</h2>
           </div>
           <p class="panel-hint">Select all control packages to be provided.</p>
@@ -212,7 +226,7 @@
       <section class="panel" aria-labelledby="disruptionHeading">
         <div class="panel-head">
           <div>
-            <p class="step-count">Step 13</p>
+            <p class="step-count">Step 14</p>
             <h2 id="disruptionHeading">Disruption areas</h2>
           </div>
           <p class="panel-hint">Tap all rooms where works will cause disruption such as lifted floorboards.</p>
