feat: add step navigation and semicolon output formatting

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     </header>
 
     <main class="content">
+      <nav class="step-nav" aria-label="Survey steps">
+        <ol class="step-nav-list" id="stepShortcuts"></ol>
+      </nav>
       <section class="panel" aria-labelledby="accessHeading">
         <div class="panel-head">
           <div>
