Add powerflushing step with options

--- a/index.html
+++ b/index.html
@@ -306,10 +306,24 @@
         </fieldset>
       </section>
 
-      <section class="panel" aria-labelledby="customerActionsHeading">
+      <section class="panel" aria-labelledby="powerflushHeading">
         <div class="panel-head">
           <div>
             <p class="step-count">Step 20</p>
+            <h2 id="powerflushHeading">Powerflushing requirements</h2>
+          </div>
+          <p class="panel-hint">Choose one option to describe the agreed powerflushing approach.</p>
+        </div>
+        <fieldset class="fieldset" aria-labelledby="powerflushHeading">
+          <legend>Powerflushing outcome</legend>
+          <div class="choice-group" id="powerflushChoices" role="radiogroup" aria-labelledby="powerflushHeading"></div>
+        </fieldset>
+      </section>
+
+      <section class="panel" aria-labelledby="customerActionsHeading">
+        <div class="panel-head">
+          <div>
+            <p class="step-count">Step 21</p>
             <h2 id="customerActionsHeading">Customer actions</h2>
           </div>
           <p class="panel-hint">Document actions the customer must complete ahead of installation.</p>
@@ -323,7 +337,7 @@
       <section class="panel" aria-labelledby="awarenessHeading">
         <div class="panel-head">
           <div>
-            <p class="step-count">Step 21</p>
+            <p class="step-count">Step 22</p>
             <h2 id="awarenessHeading">Things to be aware of</h2>
           </div>
           <p class="panel-hint">Share key advisories and expectations with the customer.</p>
