Add step pagination controls

--- a/index.html
+++ b/index.html
@@ -344,6 +344,12 @@
         </div>
         <div class="sectioned-fieldsets" id="awarenessSections" role="group" aria-labelledby="awarenessHeading"></div>
       </section>
+
+      <nav class="step-pager" aria-label="Step pagination">
+        <button type="button" class="step-pager-button is-prev" id="prevStep">Previous step</button>
+        <p class="step-progress" id="stepProgressLabel" aria-live="polite">Step 1 of 22</p>
+        <button type="button" class="step-pager-button is-next" id="nextStep">Next step</button>
+      </nav>
     </main>
 
     <nav class="step-nav" aria-label="Survey steps">
