Add output copy sections for customer actions

--- a/output.html
+++ b/output.html
@@ -88,6 +88,22 @@
         </div>
         <pre class="output-content" data-output-field="disruption"></pre>
       </section>
+
+      <section class="output-card" aria-labelledby="outputCustomerActions">
+        <div class="output-card-head">
+          <h2 id="outputCustomerActions">Customer agreed actions</h2>
+          <button type="button" class="copy-button" data-output-key="customerAgreedActions">Copy</button>
+        </div>
+        <pre class="output-content" data-output-field="customerAgreedActions"></pre>
+      </section>
+
+      <section class="output-card" aria-labelledby="outputAdditional">
+        <div class="output-card-head">
+          <h2 id="outputAdditional">Additional</h2>
+          <button type="button" class="copy-button" data-output-key="additional">Copy</button>
+        </div>
+        <pre class="output-content" data-output-field="additional"></pre>
+      </section>
     </main>
   </div>
 
