Add GPT integration tooling to output page

--- a/output.html
+++ b/output.html
@@ -359,5 +359,6 @@
   }
   document.readyState==='loading' ? document.addEventListener('DOMContentLoaded', initDepotRouter) : initDepotRouter();
   </script>
+  <script src="./js/gpt-all-13.js"></script>
 </body>
 </html>
