Add image-based selectors for boiler and flue steps

--- a/index.html
+++ b/index.html
@@ -195,6 +195,10 @@
           </div>
           <p class="panel-hint">Select all upgrade items required. Use the + or − controls for multiples.</p>
         </div>
+        <fieldset class="fieldset" id="zoningGroup">
+          <legend>Zoning layout</legend>
+          <div class="choice-group" id="zoningChoices" role="radiogroup" aria-labelledby="zoningGroup"></div>
+        </fieldset>
         <div class="upgrade-grid" id="systemUpgradeGrid" role="group" aria-labelledby="systemUpgradesHeading"></div>
       </section>
 
