--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </header>
 
     <main class="content">
-      <section class="panel" aria-labelledby="accessHeading">
+      <div id="survey-container">
+      <section class="panel step-section is-active" id="step-section-1" aria-labelledby="accessHeading">
         <div class="panel-head">
           <div>
             <p class="step-count">Step 1</p>
@@ -29,9 +30,12 @@
           <p class="panel-hint">Tap all that apply for this property.</p>
         </div>
         <div class="card-grid" id="accessGrid" role="group" aria-describedby="accessHeading"></div>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="boilerHeading">
+      <section class="panel step-section" id="step-section-2" aria-labelledby="boilerHeading">
         <div class="panel-head">
           <div>
             <p class="step-count">Step 2</p>
@@ -40,9 +44,13 @@
           <p class="panel-hint">Choose the boiler type currently installed.</p>
         </div>
         <div class="choice-group" id="boilerChoices" role="radiogroup" aria-labelledby="boilerHeading"></div>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="flueHeading">
+      <section class="panel step-section" id="step-section-3" aria-labelledby="flueHeading">
         <div class="panel-head">
           <div>
             <p class="step-count">Step 3</p>
@@ -60,9 +68,13 @@
             <div class="choice-group" role="radiogroup" aria-labelledby="flueExitGroup"></div>
           </fieldset>
         </div>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="locationHeading">
+      <section class="panel step-section" id="step-section-4" aria-labelledby="locationHeading">
         <div class="panel-head">
           <div>
             <p class="step-count">Step 4</p>
@@ -73,9 +85,13 @@
         <div class="house-scene">
           <div class="house-illustration" id="houseHotspots" role="listbox" aria-labelledby="locationHeading"></div>
         </div>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="newLocationHeading">
+      <section class="panel step-section" id="step-section-5" aria-labelledby="newLocationHeading">
         <div class="panel-head">
           <div>
             <p class="step-count">Step 5</p>
@@ -86,9 +102,13 @@
         <div class="house-scene">
           <div class="house-illustration compact" id="newHouseHotspots" role="listbox" aria-labelledby="newLocationHeading"></div>
         </div>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="newBoilerHeading">
+      <section class="panel step-section" id="step-section-6" aria-labelledby="newBoilerHeading">
         <div class="panel-head">
           <div>
             <p class="step-count">Step 6</p>
@@ -100,9 +120,13 @@
           <legend>New boiler type</legend>
           <div class="choice-group" id="newBoilerChoices" role="radiogroup" aria-labelledby="newBoilerTypeGroup"></div>
         </fieldset>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="newFlueHeading">
+      <section class="panel step-section" id="step-section-7" aria-labelledby="newFlueHeading">
         <div class="panel-head">
           <div>
             <p class="step-count">Step 7</p>
@@ -143,26 +167,16 @@
             </div>
           </section>
         </div>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="makingGoodHeading">
+      <section class="panel step-section" id="step-section-8" aria-labelledby="buildingWorkHeading">
         <div class="panel-head">
           <div>
             <p class="step-count">Step 8</p>
-            <h2 id="makingGoodHeading">Making good to flue penetrations</h2>
-          </div>
-          <p class="panel-hint">Select all making good items required for the flue installation.</p>
-        </div>
-        <fieldset class="fieldset" id="makingGoodGroup">
-          <legend>Flue making good</legend>
-          <div class="choice-group" id="makingGoodChoices" role="group" aria-labelledby="makingGoodGroup"></div>
-        </fieldset>
-      </section>
-
-      <section class="panel" aria-labelledby="buildingWorkHeading">
-        <div class="panel-head">
-          <div>
-            <p class="step-count">Step 9</p>
             <h2 id="buildingWorkHeading">Building work &amp; making good</h2>
           </div>
           <p class="panel-hint">Select all building work requirements linked to the flue.</p>
@@ -171,12 +185,16 @@
           <legend>Building work</legend>
           <div class="choice-group" id="buildingWorkChoices" role="group" aria-labelledby="buildingWorkGroup"></div>
         </fieldset>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="condensateHeading">
+      <section class="panel step-section" id="step-section-9" aria-labelledby="condensateHeading">
         <div class="panel-head">
           <div>
-            <p class="step-count">Step 10</p>
+            <p class="step-count">Step 9</p>
             <h2 id="condensateHeading">Condensate route</h2>
           </div>
           <p class="panel-hint">Select all condensate discharge arrangements required.</p>
@@ -185,12 +203,16 @@
           <legend>Condensate discharge</legend>
           <div class="choice-group" id="condensateChoices" role="group" aria-labelledby="condensateRouteGroup"></div>
         </fieldset>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="systemUpgradesHeading">
+      <section class="panel step-section" id="step-section-10" aria-labelledby="systemUpgradesHeading">
         <div class="panel-head">
           <div>
-            <p class="step-count">Step 11</p>
+            <p class="step-count">Step 10</p>
             <h2 id="systemUpgradesHeading">Heating system works</h2>
           </div>
           <p class="panel-hint">Select all upgrade items required. Use the + or − controls for multiples.</p>
@@ -200,12 +222,16 @@
           <div class="choice-group" id="zoningChoices" role="radiogroup" aria-labelledby="zoningGroup"></div>
         </fieldset>
         <div class="upgrade-grid" id="systemUpgradeGrid" role="group" aria-labelledby="systemUpgradesHeading"></div>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="cylinderHeading">
+      <section class="panel step-section" id="step-section-11" aria-labelledby="cylinderHeading">
         <div class="panel-head">
           <div>
-            <p class="step-count">Step 12</p>
+            <p class="step-count">Step 11</p>
             <h2 id="cylinderHeading">Cylinder works</h2>
           </div>
           <p class="panel-hint">Select all cylinder requirements for the installation.</p>
@@ -214,12 +240,16 @@
           <legend>Cylinder requirements</legend>
           <div class="choice-group" id="cylinderChoices" role="group" aria-labelledby="cylinderGroup"></div>
         </fieldset>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="controlHeading">
+      <section class="panel step-section" id="step-section-12" aria-labelledby="controlHeading">
         <div class="panel-head">
           <div>
-            <p class="step-count">Step 13</p>
+            <p class="step-count">Step 12</p>
             <h2 id="controlHeading">Customer controls</h2>
           </div>
           <p class="panel-hint">Select all control packages to be provided.</p>
@@ -228,12 +258,16 @@
           <legend>Controls supplied</legend>
           <div class="choice-group" id="controlChoices" role="group" aria-labelledby="controlGroup"></div>
         </fieldset>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="disruptionHeading">
+      <section class="panel step-section" id="step-section-13" aria-labelledby="disruptionHeading">
         <div class="panel-head">
           <div>
-            <p class="step-count">Step 14</p>
+            <p class="step-count">Step 13</p>
             <h2 id="disruptionHeading">Disruption areas</h2>
           </div>
           <p class="panel-hint">Tap all rooms where works will cause disruption such as lifted floorboards.</p>
@@ -241,12 +275,16 @@
         <div class="house-scene">
           <div class="house-illustration" id="disruptionHotspots" role="group" aria-labelledby="disruptionHeading"></div>
         </div>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="doubleLiftHeading">
+      <section class="panel step-section" id="step-section-14" aria-labelledby="doubleLiftHeading">
         <div class="panel-head">
           <div>
-            <p class="step-count">Step 15</p>
+            <p class="step-count">Step 14</p>
             <h2 id="doubleLiftHeading">Double handed lift items</h2>
           </div>
           <p class="panel-hint">Select every component that requires two-person lifting.</p>
@@ -255,12 +293,16 @@
           <legend>Components requiring assistance</legend>
           <div class="choice-group" id="doubleLiftChoices" role="group" aria-labelledby="doubleLiftHeading"></div>
         </fieldset>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="permissionHeading">
+      <section class="panel step-section" id="step-section-15" aria-labelledby="permissionHeading">
         <div class="panel-head">
           <div>
-            <p class="step-count">Step 16</p>
+            <p class="step-count">Step 15</p>
             <h2 id="permissionHeading">Permissions</h2>
           </div>
           <p class="panel-hint">Note all permissions required before works can begin.</p>
@@ -269,12 +311,16 @@
           <legend>Permissions needed</legend>
           <div class="choice-group" id="permissionChoices" role="group" aria-labelledby="permissionHeading"></div>
         </fieldset>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="hazardHeading">
+      <section class="panel step-section" id="step-section-16" aria-labelledby="hazardHeading">
         <div class="panel-head">
           <div>
-            <p class="step-count">Step 17</p>
+            <p class="step-count">Step 16</p>
             <h2 id="hazardHeading">Hazards</h2>
           </div>
           <p class="panel-hint">Highlight potential hazards that engineers must plan for.</p>
@@ -283,23 +329,31 @@
           <legend>On-site hazards</legend>
           <div class="choice-group" id="hazardChoices" role="group" aria-labelledby="hazardHeading"></div>
         </fieldset>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="pipeworkHeading">
+      <section class="panel step-section" id="step-section-17" aria-labelledby="pipeworkHeading">
         <div class="panel-head">
           <div>
-            <p class="step-count">Step 18</p>
+            <p class="step-count">Step 17</p>
             <h2 id="pipeworkHeading">Pipe work requirements</h2>
           </div>
           <p class="panel-hint">Record gas supply, routing, and commissioning notes.</p>
         </div>
         <div class="sectioned-fieldsets" id="pipeworkSections" role="group" aria-labelledby="pipeworkHeading"></div>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="disruptionCodesHeading">
+      <section class="panel step-section" id="step-section-18" aria-labelledby="disruptionCodesHeading">
         <div class="panel-head">
           <div>
-            <p class="step-count">Step 19</p>
+            <p class="step-count">Step 18</p>
             <h2 id="disruptionCodesHeading">Disruption requirements</h2>
           </div>
           <p class="panel-hint">Select all preparation and protection measures required.</p>
@@ -308,12 +362,16 @@
           <legend>Disruption notes</legend>
           <div class="choice-group" id="disruptionCodeChoices" role="group" aria-labelledby="disruptionCodesHeading"></div>
         </fieldset>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="powerflushHeading">
+      <section class="panel step-section" id="step-section-19" aria-labelledby="powerflushHeading">
         <div class="panel-head">
           <div>
-            <p class="step-count">Step 20</p>
+            <p class="step-count">Step 19</p>
             <h2 id="powerflushHeading">Powerflushing requirements</h2>
           </div>
           <p class="panel-hint">Choose one option to describe the agreed powerflushing approach.</p>
@@ -322,12 +380,16 @@
           <legend>Powerflushing outcome</legend>
           <div class="choice-group" id="powerflushChoices" role="radiogroup" aria-labelledby="powerflushHeading"></div>
         </fieldset>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="customerActionsHeading">
+      <section class="panel step-section" id="step-section-20" aria-labelledby="customerActionsHeading">
         <div class="panel-head">
           <div>
-            <p class="step-count">Step 21</p>
+            <p class="step-count">Step 20</p>
             <h2 id="customerActionsHeading">Customer actions</h2>
           </div>
           <p class="panel-hint">Document actions the customer must complete ahead of installation.</p>
@@ -336,29 +398,28 @@
           <legend>Customer responsibilities</legend>
           <div class="choice-group" id="customerActionChoices" role="group" aria-labelledby="customerActionsHeading"></div>
         </fieldset>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+          <button type="button" class="section-nav-button next" data-nav="next">Next</button>
+        </div>
       </section>
 
-      <section class="panel" aria-labelledby="awarenessHeading">
+      <section class="panel step-section" id="step-section-21" aria-labelledby="awarenessHeading">
         <div class="panel-head">
           <div>
-            <p class="step-count">Step 22</p>
+            <p class="step-count">Step 21</p>
             <h2 id="awarenessHeading">Things to be aware of</h2>
           </div>
           <p class="panel-hint">Share key advisories and expectations with the customer.</p>
         </div>
         <div class="sectioned-fieldsets" id="awarenessSections" role="group" aria-labelledby="awarenessHeading"></div>
+        <div class="section-nav">
+          <button type="button" class="section-nav-button prev" data-nav="prev">Back</button>
+        </div>
       </section>
 
-      <nav class="step-pager" aria-label="Step pagination">
-        <button type="button" class="step-pager-button is-prev" id="prevStep">Previous step</button>
-        <p class="step-progress" id="stepProgressLabel" aria-live="polite">Step 1 of 22</p>
-        <button type="button" class="step-pager-button is-next" id="nextStep">Next step</button>
-      </nav>
+      </div>
     </main>
-
-    <nav class="step-nav" aria-label="Survey steps">
-      <ol class="step-nav-list" id="stepShortcuts"></ol>
-    </nav>
   </div>
 
   <script src="app.js" type="module"></script>
